--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.2.0",
     "postcss-loader": "^3.0.0",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
